1025 push 211025.md 수정

--- a/to-do/211025.md
+++ b/to-do/211025.md
@@ -1,6 +1,7 @@
-# To Do
+# :balloon: To Do
 
-- [ ] 자동생성으로 바꾸기
+## 자동 생성으로 변경
+
 - [ ] 카페 / 카페리뷰, 예약 / 어드민 카페 / 어드민 스터디
 - [ ] ceo카페 / ceo카페룸 / ceo예약
 - [ ] 스터디 / MyStudy / 길더 / 투두 리스트 / 자유 게시판 (첨부파일 같이)
