--- a/to-do/211025.md
+++ b/to-do/211025.md
@@ -4,7 +4,8 @@
 
 - [ ] 카페 / 카페리뷰, 예약 / 어드민 카페 / 어드민 스터디
 - [ ] ceo 카페 / ceo 카페룸 / ceo 예약
-- [ ] 스터디 / MyStudy / 길더 / 투두 리스트 / 자유 게시판 (첨부파일 같이)
+- [ ] 스터디 / MyStudy / 길더 / 자유 게시판 (첨부파일 같이)
+- [x] 투두 리스트
 
 ## 새로 해야 함
 
