--- a/to-do/211025.md
+++ b/to-do/211025.md
@@ -2,14 +2,23 @@
 
 ## 자동 생성으로 변경
 
-- [ ] 카페 / 카페리뷰, 예약 / 어드민 카페 / 어드민 스터디
-- [ ] ceo 카페 / ceo 카페룸 / ceo 예약
-- [ ] 스터디 / MyStudy / 길더 / 자유 게시판 (첨부파일 같이)
+- [ ] 카페
+- [ ] 카페리뷰, 예약
+- [ ] 어드민 카페
+- [ ] 어드민 스터디
+- [ ] ceo 카페
+- [ ] ceo 카페룸
+- [ ] ceo 예약
+- [ ] 스터디
+- [ ] MyStudy
+- [ ] 길더
 - [x] 투두 리스트
+- [ ] 자유 게시판 (+ 첨부파일)
 
 ## 새로 해야 함
 
-- [ ] CommentDao 인터페이스 / CommentDao.xml
+- [ ] CommentDao 인터페이스
+- [ ] CommentDao.xml
 
 ## 구현 해야 함
 
