1027 push to-do 폴더 전체 수정

--- a/to-do/21-10-19.md
+++ b/to-do/21-10-19.md
@@ -1,11 +1,11 @@
 # :balloon: To Do
 
-- [ ] 스터디 할 사람이 인원수 + 출력문 부분 수정
-  - [ ] 인원수 수정할 때 "참여 중인 인원보다 적을 수는 없습니다" 수정
-- [ ] 마이 프로필 수정
-  - [ ] 가입 시 이름이랑 전화번호 추가 -> 이름이랑 전화번호 수정 가능하게 추가
-- [ ] 스터디
-  - [ ] 신청해서 구성원이 됐는데(or 조장) 내 스터디 목록에 출력 X
-- [ ] 모든 핸들러 Add 부분 할 때 시작 번호 확인
-- [ ] 관리자
-  - [ ] 카페 승인 부분 해결 -> 승인 대기 중인 카페가 아닙니다로 뜸
+- 스터디 할 사람이 인원수 + 출력문 부분 수정
+  - 인원수 수정할 때 "참여 중인 인원보다 적을 수는 없습니다" 수정
+- 마이 프로필 수정
+  - 가입 시 이름이랑 전화번호 추가 -> 이름이랑 전화번호 수정 가능하게 추가
+- 스터디
+  - 신청해서 구성원이 됐는데(or 조장) 내 스터디 목록에 출력 X
+- 모든 핸들러 Add 부분 할 때 시작 번호 확인
+- 관리자
+  - 카페 승인 부분 해결 -> 승인 대기 중인 카페가 아닙니다로 뜸
