--- a/to-do/21-10-23.md
+++ b/to-do/21-10-23.md
@@ -1,7 +1,7 @@
 # :balloon: To Do
 
-- [ ] 회원/ceo 탈퇴 시 회원 조회 -> 탈퇴 회원으로 변경 X
-- [ ] 스터디 여러개 신청하고 승인 대기 중일때 내 스터디 목록에서 하나만 보임
-- [ ] ceo 비밀번호 찾기 -> 회원과 형식 통일
-- [ ] 스터디 여러 개 신청하면 스터디 전체 목록에서 순서가 이상해짐 (북마크 여러 명일 때랑 참여 인원 여러 명일 때 문제)
-- [ ] 회원가입 할때 Field 'name' doesn't have a default value 에러뜸
+- 회원/ceo 탈퇴 시 회원 조회 -> 탈퇴 회원으로 변경 X
+- 스터디 여러개 신청하고 승인 대기 중일때 내 스터디 목록에서 하나만 보임
+- ceo 비밀번호 찾기 -> 회원과 형식 통일
+- 스터디 여러 개 신청하면 스터디 전체 목록에서 순서가 이상해짐 (북마크 여러 명일 때랑 참여 인원 여러 명일 때 문제)
+- 회원가입 할때 Field 'name' doesn't have a default value 에러뜸
