1028 push 21-10-28 정리 완료 다들 열람 부탁

--- a/to-do/21-10-27.md
+++ b/to-do/21-10-27.md
@@ -37,7 +37,7 @@
    - ToDo 완료되면 +5 (하루 제한: 5개)
    - 자유게시판 게시글 작성 시 +5 (하루 제한: 5개)
 2. 랭킹순 (1주 누적): 평균 내기
-3. 스터디 신고 기능
+3. 게시글 및 댓글 신고 기능
 4. 좋아요 기능
 
 ### <기업>
