--- a/to-do/2021-10-29.md
+++ b/to-do/2021-10-29.md
@@ -24,3 +24,5 @@
 2. `ALTER TABLE study ALTER COLUMN status SET DEFAULT 1;`
 3. `ALTER TABLE study ALTER COLUMN whether_report SET DEFAULT 1;`
 4. `update study set whether_report=1;`
+5. `ALTER TABLE point MODIFY COLUMN point_no INTEGER NOT NULL AUTO_INCREMENT COMMENT '점수번호';`
+6. `insert into point(member_no, study_no, point) values(1, 1, 100);`
