--- a/to-do/2021-11-04.md
+++ b/to-do/2021-11-04.md
@@ -1,16 +1,46 @@
 # :balloon: To Do
 
-## 통일
-
 [스터디 하위 메뉴(서블릿)]
-todoList, Freeboard, Guilder
+mystudy(** List, Detail **, Delete, Exit, Update) 
+todoList, 
+Freeboard, 
+Guilder
 
 [API]
-Calender, SNS 로그인, 화상채팅
+Calender, SNS 로그인, 화상채팅, (카페)결제
 
 [기능구현]
 활동 점수, 랭킹 페이지(전체 | 최신순 | 인기순  --> 카카오 오븐 참고)
 
+// --------------------------------------------------------------------
+
+[조장, 구성원, 승인 대기 중 페이지 따로]
+mystudyList(JSP, Controller 각각 만들기 >> 나중에 합치기)
+조장: 은채
+구성원: 솔
+승인 대기: 형민 
+
+mystudyDetail(JSP, Controller 각각 만들기 >> 나중에 합치기)
+조장: 은채
+구성원: 솔
+승인 대기: 형민 
+
+참여 신청 & bookmark: 계령
+cafe 예약: 다혜
+
+// --------------------------------------------------------------------
+
 해야 하는 순서
-1. 스터디 하위 메뉴 서블릿 ~ JSTL 적용
-2. Calender, SNS 로그인
+1. MyStudy 패키지 먼저
+2. 스터디 하위 메뉴 서블릿 ~ JSTL 적용
+3. Calender, SNS 로그인
+
+// --------------------------------------------------------------------
+
+[안 됐던 것들] - 각자 디테일 알아서 하기(어려우니까 같이 하기 ㅜㅜ)
+1. 북마크 추가
+2. 내 북마크 목록
+3. 다들 헤더에 링크 걸기
+4. 문의글 답변 나누기
+5. 개인/기업 ID, PW 찾기
+6. 중복 체크!!
