--- a/to-do/2021-11-05.md
+++ b/to-do/2021-11-05.md
@@ -1,31 +1,30 @@
 # :balloon: To Do
 
 [스터디 하위 메뉴(서블릿)]
-mystudy(Delete, Exit, Update)
-Freeboard(update, delete)
-Comment(합치고 테스트)
-Guilder(권한 위임)
+mystudy(** List, Detail **, Delete, Exit, Update) 
+todoList, 
+Freeboard,
+Comment,
+Guilder
 
 [API]
-Calender, SNS 로그인(구글, 네이버, 카카오), 화상채팅, (카페)결제
+Calender, SNS 로그인, 화상채팅, (카페)결제
 
 [기능구현]
 활동 점수, 랭킹 페이지(전체 | 최신순 | 인기순  --> 카카오 오븐 참고)
 
 // --------------------------------------------------------------------
 
-11.06 ~ing
+11.05 ~ing
 
-솔: 네이버 로그인
-은채: 구글 로그인
-형민: 캘린더
-계령: 다음 로그인(카카오는 아직..)
+솔: todoList
+형민: freeBoard
+은채: guilder
 
 
 // --------------------------------------------------------------------
 
-~ing
-
+참여 신청 & bookmark: 계령
 cafe 예약: 다혜
 
 // --------------------------------------------------------------------
@@ -37,14 +36,11 @@ cafe 예약: 다혜
 
 // --------------------------------------------------------------------
 
-[각자 알아서 하기(디테일)]
-
-1. 다들 헤더에 링크 걸기
-
 [안 됐던 것들] - 각자 디테일 알아서 하기(어려우니까 같이 하기 ㅜㅜ)
-1. 문의글 답변 나누기
-2. 개인/기업 ID, PW 찾기
-3. 중복 체크!!
-4. 스터디 검색(db랑 연결해야 함)
-5. 사진 파일 띄우기
-6. 파일 여러개 첨부
+1. 북마크 추가
+2. 내 북마크 목록
+3. 다들 헤더에 링크 걸기
+4. 문의글 답변 나누기
+5. 개인/기업 ID, PW 찾기
+6. 중복 체크!!
+7. 스터디 검색
