1120 push 관리자 스터디카페 목록, 상세, 승인, 리뷰 템플릿 구현 및 적용 완료

--- a/to-do/2021-11-07.md
+++ b/to-do/2021-11-07.md
@@ -7,7 +7,7 @@ Comment(합치고 테스트)
 Calender, SNS 로그인(구글, 네이버, 카카오), 화상채팅, (카페)결제
 
 [기능구현]
-활동 점수, 랭킹 페이지(전체 | 최신순 | 인기순  --> 카카오 오븐 참고)
+활동 점수, 랭킹 페이지(전체 | 최신순 | 인기순  --> 카카오 오븐 참고), 신고
 
 // --------------------------------------------------------------------
 
